--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 		"php": ">=5.4.0",
 		"yiisoft/yii2": "~2.0",
 		"voodoo-rocks/yii2-upload": "^3.0",
-		"aws/aws-sdk-php": "^3.23"
+		"aws/aws-sdk-php": "*"
 	},
 	"autoload": {
 		"psr-0": {
